--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "beberlei/doctrineextensions": "^1.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/rest-bundle": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
