--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "vue": "^2.6.11",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
+    "vue": "^2.6.11",
     "vuex": "^3.1.2"
   }
 }
