--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    pdfs: '%kernel.project_dir%/web/pdfs'
 
 framework:
     #esi: ~
@@ -82,4 +83,6 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    spool: { type: memory }
+    auth_mode: "%mailer_auth_mode%"
+    port:      "%mailer_port%"
+    encryption: "%mailer_encryption%"
