--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
         "doctrine/orm": "^2.5",
         "friendsofsymfony/rest-bundle": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "nelmio/api-doc-bundle": "^3.6",
+        "nelmio/cors-bundle": "1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
+        "spipu/html2pdf": "^5.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "spipu/html2pdf": "^5.2",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0"
@@ -51,7 +53,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "7.3.13"
         },
         "sort-packages": true
     },
