--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "vue-cli-service serve",
     "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -28,6 +32,7 @@
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
